- Explicitly tell Gecko not to use the system colors
* src/yelp-gecko-utils.cpp:
- Explicitly tell Gecko not to use the system colors

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2005-01-20  Shaun McCance  <shaunm@gnome.org>
 
+	* src/yelp-gecko-utils.cpp:
+	- Explicitly tell Gecko not to use the system colors
+
+2005-01-20  Shaun McCance  <shaunm@gnome.org>
+
 	* src/yelp-db-pager.c:
 	- Pass the max_depth parameter
 
