--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-01-20  Miloslav Trmac  <mitr@volny.cz>
+
+	* cs.po: Updated Czech translation.
+
 2005-01-20  Christian Rose  <menthos@menthos.com>
 
 	* sv.po: Updated Swedish translation.
