--- a/po/de.po
+++ b/po/de.po
@@ -2,17 +2,16 @@
 # Copyright (C) 2001-2004 Free Software Foundation, Inc.
 # Christian Meyer <chrisime@gnome.org>, 2001, 2002.
 # Christian Neumair <chris@gnome-de.org>, 2002-2004.
-# Christian Neumair <chris@gnome-de.org>, 2004.
 # Hendrik Brandt <heb@gnome-de.org>, 2004.
 # 
 # 
 msgid ""
 msgstr ""
-"Project-Id-Version: Yelp HEAD\n"
+"Project-Id-Version: Yelp\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-01-13 18:12-0600\n"
-"PO-Revision-Date: 2005-01-03 18:34+0100\n"
-"Last-Translator: Hendrik Brandt <heb@gnome-de.org>\n"
+"POT-Creation-Date: 2005-01-20 22:14+0100\n"
+"PO-Revision-Date: 2005-01-20 22:10+0100\n"
+"Last-Translator: Frank Arnold <frank@scirocco-5v-turbo.de>\n"
 "Language-Team: German <gnome-de@gnome.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -138,10 +137,9 @@ msgstr "Lehr- und Lernprogramme"
 msgid "Graphics"
 msgstr "Grafik"
 
-#: data/toc.xml.in.h:9 src/yelp-bookmarks.c:326
-#, fuzzy
+#: data/toc.xml.in.h:9 src/yelp-bookmarks.c:362
 msgid "Help Topics"
-msgstr "Hilfe-Browser"
+msgstr "Hilfe-Themen"
 
 #: data/toc.xml.in.h:10
 msgid "Internet"
@@ -152,28 +150,28 @@ msgid "KDE"
 msgstr "KDE"
 
 #: data/toc.xml.in.h:12
+msgid "Multimedia"
+msgstr "Multimedia"
+
+#: data/toc.xml.in.h:13
 msgid "Office"
 msgstr "Büro"
 
-#: data/toc.xml.in.h:13
+#: data/toc.xml.in.h:14
 msgid "Other"
 msgstr "Sonstige"
 
-#: data/toc.xml.in.h:14
+#: data/toc.xml.in.h:15
 msgid "Other Documentation"
 msgstr "Sonstige Dokumentation"
 
-#: data/toc.xml.in.h:15
+#: data/toc.xml.in.h:16
 msgid "Programming"
 msgstr "Entwicklung"
 
-#: data/toc.xml.in.h:16
+#: data/toc.xml.in.h:17
 msgid "Scientific"
 msgstr "Wissenschaft"
-
-#: data/toc.xml.in.h:17
-msgid "Sound &amp; Video"
-msgstr "Unterhaltungsmedien"
 
 #: data/toc.xml.in.h:18
 msgid "System Tools"
@@ -192,9 +190,8 @@ msgid "<b>Fonts</b>"
 msgstr "<b>Schrift</b>"
 
 #: data/ui/yelp.glade.h:3
-#, fuzzy
 msgid "<b>_Bookmarks:</b>"
-msgstr "_Lesezeichen"
+msgstr "<b>_Lesezeichen:</b>"
 
 #: data/ui/yelp.glade.h:4
 msgid "<b>_Title:</b>"
@@ -226,7 +223,7 @@ msgstr "Einstellungen"
 
 #: data/ui/yelp.glade.h:11
 msgid "Re_name"
-msgstr ""
+msgstr "Umbe_nennen"
 
 #: data/ui/yelp.glade.h:12
 msgid "_Browse with caret"
@@ -295,7 +292,6 @@ msgid "Use system fonts"
 msgstr "Systemschriften verwenden"
 
 #: data/yelp.schemas.in.h:8
-#, fuzzy
 msgid "Use the default fonts set for the system."
 msgstr "Die vom System vorgegebenen Schriften verwenden."
 
@@ -307,18 +303,29 @@ msgstr "Yelp"
 msgid "Yelp Factory"
 msgstr "Yelp-Fabrik"
 
-#: src/yelp-bookmarks.c:241 src/yelp-bookmarks.c:313
+#: src/yelp-bookmarks.c:141
+msgid "Open Bookmark in New Window"
+msgstr "Lesezeichen in neuem Fenster öffnen"
+
+#: src/yelp-bookmarks.c:145
+msgid "Rename Bookmark"
+msgstr "Lesezeichen umbenennen"
+
+#: src/yelp-bookmarks.c:149
+msgid "Remove Bookmark"
+msgstr "Lesezeichen entfernen"
+
+#: src/yelp-bookmarks.c:277 src/yelp-bookmarks.c:349
 #, c-format
 msgid "A bookmark titled <b>%s</b> already exists for this page."
 msgstr ""
 "Ein Lesezeichen mit dem Namen <b>%s</b> exisitiert bereits für diese Seite."
 
-#: src/yelp-bookmarks.c:341
-#, fuzzy
+#: src/yelp-bookmarks.c:377
 msgid "Document Sections"
-msgstr "Dokumentinformationen"
+msgstr "Dokumentabschnitte"
 
-#: src/yelp-db-pager.c:238
+#: src/yelp-db-pager.c:242
 #, c-format
 msgid ""
 "The file ‘%s’ could not be parsed. Either the file does not exist, or it is "
@@ -327,9 +334,9 @@ msgstr ""
 "Die Datei »%s« konnte nicht analysiert werden. Entweder exisitiert die Datei "
 "nicht oder der Inhalt ist kein gültiges XML."
 
-#: src/yelp-db-pager.c:486
-msgid "Unknown"
-msgstr "Unbekannt"
+#: src/yelp-db-pager.c:489
+msgid "Unknown Section"
+msgstr "Unbekannter Abschnitt"
 
 #: src/yelp-error.c:42 src/yelp-error.c:58
 msgid "An unknown error occured"
@@ -549,11 +556,11 @@ msgstr "Die nächste Seite in der Chronik anzeigen"
 
 #: src/yelp-window.c:367
 msgid "_Help Topics"
-msgstr ""
+msgstr "_Hilfe-Themen"
 
 #: src/yelp-window.c:369
 msgid "Go to the listing of help topics"
-msgstr ""
+msgstr "Zur Auflistung der Hilfe-Themen gehen"
 
 #: src/yelp-window.c:372
 msgid "_Previous Section"
@@ -626,17 +633,14 @@ msgstr ""
 "darum, das Dokument in XML umzuwandeln."
 
 #: src/yelp-window.c:1024
-#, fuzzy
 msgid "Find:"
-msgstr "Suchen"
+msgstr "Suchen:"
 
 #: src/yelp-window.c:1040
-#, fuzzy
 msgid "Find _Next"
 msgstr "_Weitersuchen"
 
 #: src/yelp-window.c:1052
-#, fuzzy
 msgid "Find _Previous"
 msgstr "_Rückwärts suchen"
 
@@ -697,13 +701,13 @@ msgstr ""
 "Datei nicht oder sie ist falsch formatiert."
 
 #: src/yelp-xslt-pager.c:215
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "The document ‘%s’ could not be processed. The file ‘%s’ is either missing, "
 "or it is not a valid XSLT stylesheet."
 msgstr ""
 "Das Dokument »%s« konnte nicht verarbeitet werden. Entweder existiert die "
-"Datei nicht oder sie ist kein gültiges XSLT-Stylesheet."
+"Datei »%s« nicht oder sie ist kein gültiges XSLT-Stylesheet."
 
 #: src/yelp-xslt-pager.c:228
 #, c-format
@@ -712,11 +716,14 @@ msgid ""
 "is not a valid XSLT stylesheet."
 msgstr ""
 "Das Dokument »%s« konnte nicht verarbeitet werden. Entweder existiert die "
-"Datei nicht oder sie ist kein gültiges XSLT-Stylesheet."
+"Datei »%s« nicht oder sie ist kein gültiges XSLT-Stylesheet."
 
 #: yelp.desktop.in.in.h:1
 msgid "Get help with GNOME"
 msgstr "Hilfe zu GNOME holen"
+
+#~ msgid "Sound &amp; Video"
+#~ msgstr "Unterhaltungsmedien"
 
 #~ msgid "_Home"
 #~ msgstr "In_halt"
