Update this a bit.
2005-01-21  Kjartan Maraas  <kmaraas@gnome.org>

	* nn.po: Update this a bit.

--- a/po/nn.po
+++ b/po/nn.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: nn\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-01-13 18:12-0600\n"
-"PO-Revision-Date: 2004-03-16 19:42+0100\n"
+"POT-Creation-Date: 2005-01-21 12:59+0100\n"
+"PO-Revision-Date: 2005-01-21 13:31+0100\n"
 "Last-Translator: Åsmund Skjæveland\n"
 "Language-Team: Norwegian Nynorsk <i18n-nn@lister.ping.uio.no>\n"
 "MIME-Version: 1.0\n"
@@ -32,7 +32,7 @@ msgstr "Utvikling"
 
 #: data/man.xml.in.h:4
 msgid "FORTRAN Functions"
-msgstr ""
+msgstr "FORTRAN-funksjonar"
 
 #: data/man.xml.in.h:5 data/toc.xml.in.h:7
 msgid "Games"
@@ -52,36 +52,31 @@ msgstr "Bibliotekfunksjonar"
 
 #: data/man.xml.in.h:9 src/yelp-toc-pager.c:785
 msgid "Man Pages"
-msgstr ""
+msgstr "Manualsider"
 
 #: data/man.xml.in.h:10
-#, fuzzy
 msgid "OpenSSL Applications"
-msgstr "X-program"
+msgstr "OpenSSL-program"
 
 #: data/man.xml.in.h:11
-#, fuzzy
 msgid "OpenSSL Configuration"
-msgstr "Oppsettfiler"
+msgstr "Oppsettfiler for OpenSSL"
 
 #: data/man.xml.in.h:12
-#, fuzzy
 msgid "OpenSSL Overviews"
-msgstr "Oversikter"
+msgstr "OpenSSL-oversikter"
 
 #: data/man.xml.in.h:13
 msgid "Overviews"
 msgstr "Oversikter"
 
 #: data/man.xml.in.h:14
-#, fuzzy
 msgid "Perl Functions"
-msgstr "Bibliotekfunksjonar"
+msgstr "Perl-funksjonar"
 
 #: data/man.xml.in.h:15
-#, fuzzy
 msgid "Qt Functions"
-msgstr "Bibliotekfunksjonar"
+msgstr "Qt-funksjonar"
 
 #: data/man.xml.in.h:16
 msgid "System Administration"
@@ -92,46 +87,40 @@ msgid "System Calls"
 msgstr "Systemkall"
 
 #: data/man.xml.in.h:18
-#, fuzzy
 msgid "Termcap Applications"
-msgstr "X-program"
+msgstr "Termcap-program"
 
 #: data/man.xml.in.h:19
-#, fuzzy
 msgid "X11 Applications"
-msgstr "X-program"
+msgstr "X11-program"
 
 #: data/man.xml.in.h:20
-#, fuzzy
 msgid "X11 Configuration"
-msgstr "Oppsettfiler"
+msgstr "Oppsettfiler for X11"
 
 #: data/man.xml.in.h:21
 msgid "X11 Devices"
-msgstr ""
+msgstr "X11-einingar"
 
 #: data/man.xml.in.h:22
-#, fuzzy
 msgid "X11 Functions"
-msgstr "Bibliotekfunksjonar"
+msgstr "X11-funksjonar"
 
 #: data/man.xml.in.h:23
-#, fuzzy
 msgid "X11 Games"
-msgstr "Spel"
+msgstr "Spel for X11"
 
 #: data/man.xml.in.h:24
-#, fuzzy
 msgid "X11 Overviews"
-msgstr "Oversikter"
+msgstr "X11-oversikter"
 
 #: data/toc.xml.in.h:1
 msgid "Accessibility"
-msgstr ""
+msgstr "Tilgjenge"
 
 #: data/toc.xml.in.h:2
 msgid "Accessories"
-msgstr ""
+msgstr "Tilbehøyr"
 
 #: data/toc.xml.in.h:3
 msgid "Applets"
@@ -147,52 +136,47 @@ msgstr "Opplæringsprogram"
 
 #: data/toc.xml.in.h:8
 msgid "Graphics"
-msgstr ""
+msgstr "Grafikk"
 
-#: data/toc.xml.in.h:9 src/yelp-bookmarks.c:326
-#, fuzzy
+#: data/toc.xml.in.h:9 src/yelp-bookmarks.c:362
 msgid "Help Topics"
-msgstr "Hjelplesar"
+msgstr "Hjelpemner"
 
 #: data/toc.xml.in.h:10
-#, fuzzy
 msgid "Internet"
-msgstr "Innhald"
+msgstr "Internett"
 
 #: data/toc.xml.in.h:11
 msgid "KDE"
 msgstr "KDE"
 
 #: data/toc.xml.in.h:12
-msgid "Office"
-msgstr ""
+msgid "Multimedia"
+msgstr "Multimedia"
 
 #: data/toc.xml.in.h:13
-msgid "Other"
-msgstr ""
+msgid "Office"
+msgstr "Kontor"
 
 #: data/toc.xml.in.h:14
-#, fuzzy
-msgid "Other Documentation"
-msgstr "Informasjon om denne utgåva"
+msgid "Other"
+msgstr "Anna"
 
 #: data/toc.xml.in.h:15
-msgid "Programming"
-msgstr ""
+msgid "Other Documentation"
+msgstr "Andre dokumenter"
 
 #: data/toc.xml.in.h:16
-#, fuzzy
-msgid "Scientific"
-msgstr "Vitskaplege program"
+msgid "Programming"
+msgstr "Programmering"
 
 #: data/toc.xml.in.h:17
-msgid "Sound &amp; Video"
-msgstr ""
+msgid "Scientific"
+msgstr "Vitskapleg"
 
 #: data/toc.xml.in.h:18
-#, fuzzy
 msgid "System Tools"
-msgstr "Systemkall"
+msgstr "Systemverkty"
 
 #: data/toc.xml.in.h:19
 msgid "X Applications"
@@ -200,29 +184,27 @@ msgstr "X-program"
 
 #: data/ui/yelp.glade.h:1
 msgid "<b>Accessibility</b>"
-msgstr ""
+msgstr "<b>Tilgjenge</b>"
 
 #: data/ui/yelp.glade.h:2
 msgid "<b>Fonts</b>"
-msgstr ""
+msgstr "<b>Skrifter</b>"
 
 #: data/ui/yelp.glade.h:3
-#, fuzzy
 msgid "<b>_Bookmarks:</b>"
-msgstr "Bok"
+msgstr "<b>_Bokmerker:</b>"
 
 #: data/ui/yelp.glade.h:4
 msgid "<b>_Title:</b>"
-msgstr ""
+msgstr "<b>_Tittel:</b>"
 
 #: data/ui/yelp.glade.h:5
 msgid "Add Bookmark"
-msgstr ""
+msgstr "Legg til bokmerke"
 
 #: data/ui/yelp.glade.h:6
-#, fuzzy
 msgid "Bookmarks"
-msgstr "Bok"
+msgstr "Bokmerker"
 
 #: data/ui/yelp.glade.h:7
 msgid "C_ase sensitive"
@@ -233,22 +215,20 @@ msgid "Find"
 msgstr "Finn"
 
 #: data/ui/yelp.glade.h:9
-#, fuzzy
 msgid "Open Location"
-msgstr "Tileigning"
+msgstr "Åpne plassering"
 
 #: data/ui/yelp.glade.h:10
-#, fuzzy
 msgid "Preferences"
-msgstr "Referanse"
+msgstr "Brukervalg"
 
 #: data/ui/yelp.glade.h:11
 msgid "Re_name"
-msgstr ""
+msgstr "_Døyp om"
 
 #: data/ui/yelp.glade.h:12
 msgid "_Browse with caret"
-msgstr ""
+msgstr "_Vis markør"
 
 #: data/ui/yelp.glade.h:13
 msgid "_Find: "
@@ -256,12 +236,11 @@ msgstr "_Finn:"
 
 #: data/ui/yelp.glade.h:14
 msgid "_Fixed width:"
-msgstr ""
+msgstr "_Fast breidd:"
 
 #: data/ui/yelp.glade.h:15
-#, fuzzy
 msgid "_Location:"
-msgstr "Tileigning"
+msgstr "P_lassering:"
 
 #: data/ui/yelp.glade.h:16
 msgid "_Next"
@@ -273,11 +252,11 @@ msgstr "F_ørre"
 
 #: data/ui/yelp.glade.h:18
 msgid "_Use system fonts"
-msgstr ""
+msgstr "Br_uk systemets skrifter"
 
 #: data/ui/yelp.glade.h:19
 msgid "_Variable width:"
-msgstr ""
+msgstr "_Variabel breidd:"
 
 #: data/ui/yelp.glade.h:20
 msgid "_Wrap around"
@@ -323,26 +302,38 @@ msgstr "Yelp"
 msgid "Yelp Factory"
 msgstr "Yelp-fabrikk"
 
-#: src/yelp-bookmarks.c:241 src/yelp-bookmarks.c:313
+#: src/yelp-bookmarks.c:141
+msgid "Open Bookmark in New Window"
+msgstr "Opne bokmerke i nytt vindauge"
+
+#: src/yelp-bookmarks.c:145
+msgid "Rename Bookmark"
+msgstr "Døyp om bokmerke"
+
+#: src/yelp-bookmarks.c:149
+msgid "Remove Bookmark"
+msgstr "Fjern bokmerke"
+
+#: src/yelp-bookmarks.c:277 src/yelp-bookmarks.c:349
 #, c-format
 msgid "A bookmark titled <b>%s</b> already exists for this page."
 msgstr ""
 
-#: src/yelp-bookmarks.c:341
+#: src/yelp-bookmarks.c:377
 #, fuzzy
 msgid "Document Sections"
 msgstr "Informasjon om denne utgåva"
 
-#: src/yelp-db-pager.c:238
+#: src/yelp-db-pager.c:242
 #, c-format
 msgid ""
 "The file ‘%s’ could not be parsed. Either the file does not exist, or it is "
 "not well-formed XML."
 msgstr ""
 
-#: src/yelp-db-pager.c:486
-msgid "Unknown"
-msgstr "Ukjend"
+#: src/yelp-db-pager.c:489
+msgid "Unknown Section"
+msgstr "Ukjend avsnitt"
 
 #: src/yelp-error.c:42 src/yelp-error.c:58
 msgid "An unknown error occured"
@@ -350,12 +341,11 @@ msgstr ""
 
 #: src/yelp-error.c:46
 msgid "Could not load document"
-msgstr ""
+msgstr "Kunne ikke lasta dokumentet"
 
 #: src/yelp-error.c:48
-#, fuzzy
 msgid "Could not load section"
-msgstr "Klarte ikkje å opne nytt vindauge."
+msgstr "Klarte ikkje lasta avsnitt"
 
 #: src/yelp-error.c:50
 #, fuzzy
@@ -368,7 +358,7 @@ msgstr ""
 
 #: src/yelp-error.c:54
 msgid "Could not read document"
-msgstr ""
+msgstr "Kunne ikkje lesa dokumentet"
 
 #: src/yelp-error.c:56
 msgid "Could not process document"
@@ -410,9 +400,8 @@ msgid ""
 msgstr ""
 
 #: src/yelp-pager.c:120
-#, fuzzy
 msgid "Document Information"
-msgstr "Informasjon om denne utgåva"
+msgstr "Informasjon om dokumentet"
 
 #: src/yelp-pager.c:121
 msgid "The YelpDocInfo struct of the document"
@@ -441,7 +430,7 @@ msgstr ""
 #.
 #: src/yelp-settings.c:151
 msgid "yelp-watermark-blockquote-201C"
-msgstr ""
+msgstr "yelp-watermark-block-quote-00AB"
 
 #: src/yelp-toc-pager.c:268
 msgid "YelpTocPager: Pause count is negative."
@@ -455,7 +444,7 @@ msgstr "Klarte ikkje å lasta OMF-fila «%s»."
 #: src/yelp-toc-pager.c:680
 #, c-format
 msgid "Read man page for %s"
-msgstr ""
+msgstr "Les manualside for %s"
 
 #: src/yelp-toc-pager.c:765
 #, c-format
@@ -484,84 +473,72 @@ msgid "Help Contents"
 msgstr "Hjelpinnhald"
 
 #: src/yelp-window.c:302
-#, fuzzy
 msgid "_File"
-msgstr "/_Fil"
+msgstr "_Fil"
 
 #: src/yelp-window.c:303
-#, fuzzy
 msgid "_Edit"
-msgstr "/R_ediger"
+msgstr "R_ediger"
 
 #: src/yelp-window.c:304
-#, fuzzy
 msgid "_Go"
-msgstr "/_Gå"
+msgstr "_Gå"
 
 #: src/yelp-window.c:305
 msgid "_Bookmarks"
-msgstr ""
+msgstr "_Bokmerker"
 
 #: src/yelp-window.c:306
-#, fuzzy
 msgid "_Help"
-msgstr "/_Hjelp"
+msgstr "_Hjelp"
 
 #: src/yelp-window.c:309
-#, fuzzy
 msgid "_New Window"
-msgstr "/Fil/_Nytt vindauge"
+msgstr "_Nytt vindauge"
 
 #: src/yelp-window.c:314
-#, fuzzy
 msgid "About This Document"
-msgstr "Om dette settet"
+msgstr "Om dette dokumentet"
 
 #: src/yelp-window.c:319
 msgid "Open _Location"
-msgstr ""
+msgstr "Opne p_lassering"
 
 #: src/yelp-window.c:324
-#, fuzzy
 msgid "_Close Window"
-msgstr "/Fil/_Lukk vindauge"
+msgstr "_Lukk vindauge"
 
 #: src/yelp-window.c:330
 msgid "_Copy"
-msgstr ""
+msgstr "_Kopier"
 
 #: src/yelp-window.c:336
-#, fuzzy
 msgid "_Select All"
-msgstr "Sjå også"
+msgstr "_Merk alt"
 
 #: src/yelp-window.c:341
-#, fuzzy
 msgid "_Find..."
-msgstr "/Rediger/_Finn ..."
+msgstr "_Finn ..."
 
 #: src/yelp-window.c:346
-#, fuzzy
 msgid "_Preferences"
-msgstr "Referanse"
+msgstr "_Innstillingar"
 
 #: src/yelp-window.c:351
 msgid "_Reload"
-msgstr ""
+msgstr "_Last på nytt"
 
 #: src/yelp-window.c:357
-#, fuzzy
 msgid "_Back"
-msgstr "Tilbake"
+msgstr "Til_bake"
 
 #: src/yelp-window.c:359
 msgid "Show previous page in history"
 msgstr "Vis førre side i historikken"
 
 #: src/yelp-window.c:362
-#, fuzzy
 msgid "_Forward"
-msgstr "Framover"
+msgstr "_Framover"
 
 #: src/yelp-window.c:364
 msgid "Show next page in history"
@@ -569,51 +546,47 @@ msgstr "Vis neste side i historikken"
 
 #: src/yelp-window.c:367
 msgid "_Help Topics"
-msgstr ""
+msgstr "_Hjelpemner"
 
 #: src/yelp-window.c:369
 msgid "Go to the listing of help topics"
 msgstr ""
 
 #: src/yelp-window.c:372
-#, fuzzy
 msgid "_Previous Section"
-msgstr "/Gå/F_ørre side"
+msgstr "F_ørre avsnitt"
 
 #: src/yelp-window.c:377
-#, fuzzy
 msgid "_Next Section"
-msgstr "Avsnitt"
+msgstr "Neste _avsnitt"
 
 #: src/yelp-window.c:382
-#, fuzzy
 msgid "_Contents"
-msgstr "Innhald"
+msgstr "_Innhald"
 
 #: src/yelp-window.c:388
 msgid "_Add Bookmark"
-msgstr ""
+msgstr "_Legg til bokmerke"
 
 #: src/yelp-window.c:393
 msgid "_Edit Bookmarks..."
-msgstr ""
+msgstr "R_ediger bokmerker..."
 
 #: src/yelp-window.c:399
 msgid "_Open Link"
-msgstr ""
+msgstr "_Opne lenke"
 
 #: src/yelp-window.c:404
 msgid "Open Link in _New Window"
-msgstr ""
+msgstr "Opne lenke i _nytt vindauge"
 
 #: src/yelp-window.c:409
 msgid "_Copy Link Address"
-msgstr ""
+msgstr "_Kopier adressa til lenka"
 
 #: src/yelp-window.c:415
-#, fuzzy
 msgid "_About"
-msgstr "/Hjelp/_Om"
+msgstr "_Om"
 
 #: src/yelp-window.c:466
 msgid "Help Browser"
@@ -645,19 +618,16 @@ msgid ""
 msgstr ""
 
 #: src/yelp-window.c:1024
-#, fuzzy
 msgid "Find:"
-msgstr "Finn"
+msgstr "Finn:"
 
 #: src/yelp-window.c:1040
-#, fuzzy
 msgid "Find _Next"
-msgstr "/Rediger/Finn ne_ste"
+msgstr "Finn _neste"
 
 #: src/yelp-window.c:1052
-#, fuzzy
 msgid "Find _Previous"
-msgstr "F_ørre"
+msgstr "Finn f_ørre"
 
 #: src/yelp-window.c:1157
 #, c-format
@@ -688,15 +658,15 @@ msgstr "Lastar ..."
 #. Note to translators: put here your name (and address) so it
 #. * will shop up in the "about" box
 #: src/yelp-window.c:2166
-#, fuzzy
 msgid "translator-credits"
 msgstr ""
 "Roy-Magne Mo <rmo@sunnmore.net>\n"
-"Åsmund Skjæveland <aasmunds@fys.uio.no>"
+"Åsmund Skjæveland <aasmunds@fys.uio.no>\n"
+"Kjartan Maraas <kmaraas@gnome.org>"
 
 #: src/yelp-window.c:2171
 msgid "A documentation browser and viewer for the Gnome Desktop."
-msgstr ""
+msgstr "Dokumenthandsamar og visar for GNOME skrivebordet."
 
 #: src/yelp-xslt-pager.c:194
 #, c-format
@@ -723,16 +693,8 @@ msgstr ""
 msgid "Get help with GNOME"
 msgstr "Få hjelp om GNOME"
 
-#, fuzzy
-#~ msgid "_Home"
-#~ msgstr "Heim"
-
 #~ msgid "Go to home view"
 #~ msgstr "Gå til startside"
-
-#, fuzzy
-#~ msgid "Fin_d"
-#~ msgstr "Finn"
 
 #~ msgid "Development Environments"
 #~ msgstr "Utviklingsmiljø"
@@ -754,9 +716,6 @@ msgstr "Få hjelp om GNOME"
 
 #~ msgid "Kernels"
 #~ msgstr "Kjerner"
-
-#~ msgid "Multimedia Applications"
-#~ msgstr "Multimediaprogram"
 
 #~ msgid "Office and Productivity Applications"
 #~ msgstr "Kontor- og produktivitetsprogram"
@@ -791,10 +750,6 @@ msgstr "Få hjelp om GNOME"
 #~ msgid "The selected file could not be read."
 #~ msgstr "Den valde fila kunne ikkje lesast."
 
-#, fuzzy
-#~ msgid "The file could not be processed."
-#~ msgstr "Den valde fila kunne ikkje lesast."
-
 #~ msgid "X11"
 #~ msgstr "X11"
 
@@ -821,25 +776,6 @@ msgstr "Få hjelp om GNOME"
 
 #~ msgid "Documents"
 #~ msgstr "Dokument"
-
-#, fuzzy
-#~ msgid "_Next Page"
-#~ msgstr "/Gå/_Neste side"
-
-#~ msgid "&#8216;"
-#~ msgstr "‘"
-
-#~ msgid "&#8217;"
-#~ msgstr "’"
-
-#~ msgid "&#8220;"
-#~ msgstr "«"
-
-#~ msgid "&#8221;"
-#~ msgstr "»"
-
-#~ msgid "About This Article"
-#~ msgstr "Om denne artikkelen"
 
 #~ msgid "About This Bibliography"
 #~ msgstr "Om denne bibliografien"
